Add University tutoring

--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
-<meta http-equiv="refresh" content="10" />
 <title>Kelly Stewart's CV</title>
 <script src="https://use.fontawesome.com/fef6f12071.js"></script>
 <link rel="stylesheet" href="style.css" />
 
-<header id="sidebar">
+<header>
   <h1>Kelly Stewart</h1>
   <address>
     <a href="mailto:stewart.g.kelly@gmail.com" class="email">stewart.g.kelly@gmail.com</a>
@@ -13,101 +12,70 @@
     <a href="kellystewart.me" class="github">kellystewart.me</a>
   </address>
   <p class="uni">Second year in <strong>Bachelor of Computer Science</strong> at the <strong>University of Sydney</strong></p>
+  <p class="degree">Cert III in <strong>Information and Digital Technologies</strong></p>
+  <p class="skills"><strong>Python</strong>, HTML, CSS, <strong>Java</strong>, SQL, <strong>Emacs Lisp</strong>, Lua, <strong>Git</strong>, LÖVE, Photoshop, Unity</p>
   <ul class="interests">
     <li class="reading">Reading
     <li class="drawing">Drawing
-    <li class="programming">Coding
+    <li class="dance">Swing dancing
     <li class="sca">Medieval recreation
   </ul>
 </header>
 
 
 <main>
-<section id="achievements">
-  <header>
-    <h2>Achievements</h2>
-    <p class="tagline">Things I've earned</p>
- </header>
- <h3>2015</h3>
- <ul>
-    <li>Certificate III in Information and Digital Technologies
-    <li>NCSS Outstanding Project Work Award
- </ul>
- <h3>2016</h3>
- <ul>
-   <li>HD in INFO1103 Introduction to Programming and INFO1905 Data Structures
-   <li>Global Game Jam honorable mention 2016
-  </ul>
-</section>
 
-<section id="skills">
-  <header>
-    <h2>Skills</h2>
-    <p class="tagline">Things I know</p>
-  </header>
-  <ul>
-    <li>Java
-    <li>Python
-    <li>HTML
-    <li>CSS
-    <li>Emacs Lisp
-    <li>SQL
-    <li>Shell scripting
-    <li>Lua
-    <li>Photoshop
-    <li>Illustrator
-    <li>Eclipse
-    <li>Unity
-  </ul>
-</section>
-
-<section id="experience">
-  <header>
-    <h2>Experience</h2>
-    <p class="tagline">Things I've done</p>
-  </header>
   <section>
-    <h3>SUITS</h3>
+    <h2>Work History</h2>
     <ul>
-        <li>Helpdesk tutor
-        <li>Sydney University IT Society
-        <li>First year university students
-        <li>Java, SQL, shell scripting and other computer issues
-        <li>Gained skills in working with others and tutoring
+        <li>2017: GrokLearning - Casual - Online tutoring
+        <li>2017: University of Sydney - Casual - Tutor
+    </ul>
+    <h2>Volunteer History</h2>
+    <ul>
+      <li>2016: National Computer Science School Challenge, tutoring years 5 - 12 online
+      <li>2016 - 2017: Sydney University IT Society Java Helpdesk, tutoring first years
+      <li>2016 - 2017: Girl's Programming Network, Python, classroom tutoring years 5 - 8
+      <li>2017: National Computer Science School Camp
     </ul>
   </section>
 
-    <section>
-    <h3>NCSS Challenge</h3>
+  <section>
+    <h2>National Computer Science School Challenge</h2>
     <ul>
-        <li>Online GrokLearning challenge tutor
-        <li>Year 5 - 12 students
-        <li>Python challenge problems
+        <li>Tutored students years 5 - 12 online through GrokLearning
+        <li>Helped them through Python challenge problems and logical thinking
         <li>Learned how to talk to different age groups when attempting to explain programming concepts
     </ul>
     </section>
 
-    <section>
-    <h3>NCSS Camp</h3>
+  <section class="camp">
+    <h2>National Computer Science School Camp</h2>
     <ul>
-        <li>Camp tutor
-        <li>Ten-day intensive computer science summer school
-        <li>Year 10 - 12 students
-        <li>Python, SQL, web design
-        <li>Provided support to students with developing a web application with Tornado
-        <li>Helped run camp activities
+        <li>Ten-day intensive computer science school for students years 10 - 12
+        <li>Worked with a team of 6 tutors to manage a classroom of 17 students
+        <li>Provided support with developing a web application with Tornado, including Python, SQL and web design
+        <li>Helped run camp activities, such as sorting algorithm simulation challenge and general organization
     </ul>
+  </section>
+
+    <section>
+      <h2>Girl's Programming Network</h2>
+      <ul>
+        <li>Tutored a classroom of year 5 - 8 students
+        <li>Helped create content for workbooks and computerless computing games
+        <li>Provided advice and support to students learning Python
+      </ul>
     </section>
 
     <section>
-      <h3>GPN</h3>
+      <h2>Global Game Jam</h2>
       <ul>
-        <li>Classroom tutor
-        <li>Girls' Programming Network
-        <li>Year 5 - 8 students
-        <li>Python, computerless computing games
+        <li>Worked with a team of 7 to create a game in 48 hours
+        <li>Learned Unity and Java on the spot during the game jam
+        <li>Became main programmer halfway through
+        <li>Received an Honorable Mention jammy award
       </ul>
     </section>
-</section>
 
 </main>
