--- a/cv.html
+++ b/cv.html
@@ -6,76 +6,133 @@
 
 <header>
   <h1>Kelly Stewart</h1>
+
   <address>
     <a href="mailto:stewart.g.kelly@gmail.com" class="email">stewart.g.kelly@gmail.com</a>
     <a href="tel:+61459767675" class="phone">0459 767 675</a>
-    <a href="kellystewart.me" class="github">kellystewart.me</a>
+    <a href="http://github.com/miscoined" class="github">@miscoined</a>
+    <a href="http://miscoined.me" class="web">miscoined.me</a>
   </address>
+
+  <p class="job">Casual tutor at the <strong>University of Sydney</strong> and <strong>Diversity Representative Executive</strong> of <strong>Sydney University IT Society</strong></p>
   <p class="uni">Second year in <strong>Bachelor of Computer Science</strong> at the <strong>University of Sydney</strong></p>
   <p class="degree">Cert III in <strong>Information and Digital Technologies</strong></p>
-  <p class="skills"><strong>Python</strong>, HTML, CSS, <strong>Java</strong>, SQL, <strong>Emacs Lisp</strong>, Lua, <strong>Git</strong>, LÖVE, Photoshop, Unity</p>
-  <ul class="interests">
-    <li class="reading">Reading
-    <li class="drawing">Drawing
-    <li class="dance">Swing dancing
-    <li class="sca">Medieval recreation
-  </ul>
+  <p class="skills"><strong>Python</strong>, HTML, CSS, <strong>Java</strong>, SQL, Common Lisp, <strong>Emacs Lisp</strong>, Lua, C, C#, <strong>Git</strong>, LÖVE, Photoshop, Unity, Flask</p>
 </header>
 
 
 <main>
 
   <section>
+
     <h2>Work History</h2>
-    <ul>
-        <li>2017: GrokLearning - Casual - Online tutoring
-        <li>2017: University of Sydney - Casual - Tutor
-    </ul>
+    <div>
+      <section>
+        <h3>Competition Tutor</h3>
+        <p>Casual
+        <p>GrokLearning
+        <p>March 2017
+        <ul>
+          <li>4 weeks of online tutoring for Web.Comp
+          <li>High school aged students
+          <li>Answered questions and helped students with HTML and CSS problems
+        </ul>
+      </section>
+
+      <section>
+        <h3>ENGG1805 Tutor</h3>
+        <p>Casual
+        <p>University of Sydney
+        <p>Semester 1 2017
+        <ul>
+          <li>Professional Engineering and IT
+          <li>3 two-hour labs per week
+          <li>Tutored students on the use of tools such as Git and Eclipse
+          <li>Taught good testing practices through JUnit
+          <li>Marked students' final Java projects, developed over serveral weeks of work in teams
+        </ul>
+      </section>
+
+      <section>
+        <h3>INFO1105 Tutor</h3>
+        <p>Casual
+        <p>University of Sydney
+        <p>Semester 2 2017
+        <ul>
+          <li>Data Structures
+          <li>2 two-hour labs per week
+          <li>Introduced students to data structures and big-O analysis
+          <li>Helped students with Java assignments and implementing data structures
+          <li>Marked assignments and exams
+        </ul>
+      </section>
+    </div>
+
+  </section>
+
+  <section class="camp">
     <h2>Volunteer History</h2>
-    <ul>
-      <li>2016: National Computer Science School Challenge, tutoring years 5 - 12 online
-      <li>2016 - 2017: Sydney University IT Society Java Helpdesk, tutoring first years
-      <li>2016 - 2017: Girl's Programming Network, Python, classroom tutoring years 5 - 8
-      <li>2017: National Computer Science School Camp
-    </ul>
+
+    <div>
+      <section>
+        <h3>National Computer Science School Camp</h3>
+        <p>January 2017 - Web tutor
+        <ul>
+          <li>Ten-day intensive computer science school for students years 10 - 12
+          <li>Worked with a team of 6 tutors to manage a classroom of 17 students
+          <li>Provided support with developing a web application with Tornado, including Python, SQL and web design
+        </ul>
+      </section>
+
+      <section>
+        <h3>Girl's Programming Network</h3>
+        <p>May 2017 - Stream coordinator
+        <ul>
+          <li>Tutored a classroom of year 5 - 8 students
+          <li>Helped create content for workbooks and computerless computing games
+          <li>Provided advice and support to students learning Python
+        </ul>
+      </section>
+
+      <section>
+        <h3>Sydney University IT Society</h3>
+        <p>2017 Diversity Representative Executive
+        <ul>
+          <li>Helped organize a Diversity in Tech panel in collaboration with USU as part of Verge Festival
+          <li>Helped with weekly events
+          <li>Provided newsletter content for diversity-related tech events in Sydney
+        </ul>
+      </section>
+
+    </div>
+
   </section>
 
   <section>
-    <h2>National Computer Science School Challenge</h2>
-    <ul>
-        <li>Tutored students years 5 - 12 online through GrokLearning
-        <li>Helped them through Python challenge problems and logical thinking
-        <li>Learned how to talk to different age groups when attempting to explain programming concepts
-    </ul>
-    </section>
+    <h2>Events</h2>
 
-  <section class="camp">
-    <h2>National Computer Science School Camp</h2>
-    <ul>
-        <li>Ten-day intensive computer science school for students years 10 - 12
-        <li>Worked with a team of 6 tutors to manage a classroom of 17 students
-        <li>Provided support with developing a web application with Tornado, including Python, SQL and web design
-        <li>Helped run camp activities, such as sorting algorithm simulation challenge and general organization
-    </ul>
+    <div>
+      <section>
+        <h3>Global Game Jam</h3>
+        <p style="padding-left: 10px;">2017
+        <ul>
+          <li>Worked with a team of 7 to create a game in 48 hours
+          <li>Learned Unity and C# on the spot during the game jam
+          <li>Became main programmer halfway through the jam
+          <li>Received an Honorable Mention jammy award
+        </ul>
+      </section>
+
+      <section>
+        <h3>UniHack</h3>
+        <p>2017
+        <ul>
+          <li>Worked with a team of 4 to create a software project over 24 hours
+          <li>Used machine learning libraries to create recommendation software
+          <li>Received awards for best teamwork and algorithms
+        </ul>
+      </section>
+
+    </div>
   </section>
-
-    <section>
-      <h2>Girl's Programming Network</h2>
-      <ul>
-        <li>Tutored a classroom of year 5 - 8 students
-        <li>Helped create content for workbooks and computerless computing games
-        <li>Provided advice and support to students learning Python
-      </ul>
-    </section>
-
-    <section>
-      <h2>Global Game Jam</h2>
-      <ul>
-        <li>Worked with a team of 7 to create a game in 48 hours
-        <li>Learned Unity and Java on the spot during the game jam
-        <li>Became main programmer halfway through
-        <li>Received an Honorable Mention jammy award
-      </ul>
-    </section>
-
 </main>
