Add Google internship

--- a/cv.html
+++ b/cv.html
@@ -17,7 +17,7 @@
   <p class="job">Casual tutor at the <strong>University of Sydney</strong> and <strong>Diversity Representative Executive</strong> of <strong>Sydney University IT Society</strong></p>
   <p class="uni">Second year in <strong>Bachelor of Computer Science</strong> at the <strong>University of Sydney</strong></p>
   <p class="degree">Cert III in <strong>Information and Digital Technologies</strong></p>
-  <p class="skills"><strong>Python</strong>, HTML, CSS, <strong>Java</strong>, SQL, Common Lisp, <strong>Emacs Lisp</strong>, Lua, C, C#, <strong>Git</strong>, LÖVE, Photoshop, Unity, Flask</p>
+  <p class="skills"><strong>Python</strong>, HTML, CSS, Javascript, AngularJS, <strong>Java</strong>, SQL, Common Lisp, <strong>Emacs Lisp</strong>, Lua, C, C#, <strong>Git</strong>, LÖVE, Photoshop, Unity, Flask</p>
 </header>
 
 
@@ -40,29 +40,29 @@
       </section>
 
       <section>
-        <h3>ENGG1805 Tutor</h3>
-        <p>Casual
-        <p>University of Sydney
-        <p>Semester 1 2017
+        <h3>STEP Intern</h3>
+        <p>Full time intern
+        <p>Google
+        <p>December 2017 - February 2018
         <ul>
-          <li>Professional Engineering and IT
-          <li>3 two-hour labs per week
-          <li>Tutored students on the use of tools such as Git and Eclipse
-          <li>Taught good testing practices through JUnit
-          <li>Marked students' final Java projects, developed over serveral weeks of work in teams
+          <li>12 week internship
+          <li>Worked on an internal project management tool
+          <li>Used AngularJS, Google AppEngine and webapp2
+          <li>Had regular meetings and product design sessions
         </ul>
       </section>
 
       <section>
-        <h3>INFO1105 Tutor</h3>
+        <h3>Undergraduate Tutor</h3>
         <p>Casual
         <p>University of Sydney
-        <p>Semester 2 2017
+        <p>2017
         <ul>
-          <li>Data Structures
+          <li>ENGG1805 Professional Engineering and IT
+          <li>INFO1105 Data Structures
           <li>2 two-hour labs per week
           <li>Introduced students to data structures and big-O analysis
-          <li>Helped students with Java assignments and implementing data structures
+          <li>Helped students with Java assignments
           <li>Marked assignments and exams
         </ul>
       </section>
