--- a/cv.html
+++ b/cv.html
@@ -1,138 +1,148 @@
 <!DOCTYPE html>
 <meta charset="utf-8" />
 <title>Kelly Stewart's CV</title>
-<script src="https://use.fontawesome.com/fef6f12071.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+      crossorigin="anonymous">
 <link rel="stylesheet" href="style.css" />
 
-<header>
+<header class="sidebar">
   <h1>Kelly Stewart</h1>
 
   <address>
-    <a href="mailto:stewart.g.kelly@gmail.com" class="email">stewart.g.kelly@gmail.com</a>
-    <a href="tel:+61459767675" class="phone">0459 767 675</a>
-    <a href="http://github.com/miscoined" class="github">@miscoined</a>
-    <a href="http://miscoined.me" class="web">miscoined.me</a>
+    <a href="mailto:stewart.g.kelly@gmail.com">
+      <i class="fas fa-envelope fa-fw"></i> stewart.g.kelly@gmail.com
+    </a>
+    <a href="tel:+61459767675"><i class="fas fa-phone fa-fw"></i> 0459 767 675</a>
+    <a href="http://github.com/miscoined">
+      <i class="fab fa-github fa-fw"></i> @miscoined
+    </a>
+    <a href="http://miscoined.me"><i class="fas fa-globe-asia fa-fw"></i> miscoined.me</a>
   </address>
 
-  <p class="job">Casual tutor at the <strong>University of Sydney</strong> and <strong>Diversity Representative Executive</strong> of <strong>Sydney University IT Society</strong></p>
-  <p class="uni">Second year in <strong>Bachelor of Computer Science</strong> at the <strong>University of Sydney</strong></p>
-  <p class="degree">Cert III in <strong>Information and Digital Technologies</strong></p>
-  <p class="skills"><strong>Python</strong>, HTML, CSS, <strong>Java</strong>, SQL, Common Lisp, <strong>Emacs Lisp</strong>, Lua, C, C#, <strong>Git</strong>, LÖVE, Photoshop, Unity, Flask</p>
+  <p><i class="fas fa-briefcase fa-fw"></i>
+    <span class="details">2017 - present</span>
+    Tutor at the <strong>University of Sydney</strong>
+  <p><i class="fas fa-university fa-fw"></i>
+    <span class="details">2016 - present</span>
+    Student at the <strong>University of Sydney</strong> undergoing a
+    <strong>Bachelor of Computer Science and Technology</strong>
+  <p><i class="fas fa-graduation-cap fa-fw"></i>
+    Cert III in <strong>Information and Digital Technologies</strong>
+  <p><i class="fas fa-laptop-code fa-fw"></i>
+    <strong>Python</strong>,
+    Javascript,
+    <strong>Java</strong>,
+    SQL,
+    <strong>Emacs Lisp</strong>,
+    HTML, CSS, SQL, Lua, C, C#, C++
+  <p><i class="fas fa-laptop fa-fw"></i>
+    <strong>Git</strong>,
+    Angular,
+    <strong>Flask</strong>
 </header>
-
 
 <main>
 
   <section>
-
-    <h2>Work History</h2>
-    <div>
-      <section>
-        <h3>Competition Tutor</h3>
-        <p>Casual
-        <p>GrokLearning
-        <p>March 2017
-        <ul>
-          <li>4 weeks of online tutoring for Web.Comp
-          <li>High school aged students
-          <li>Answered questions and helped students with HTML and CSS problems
-        </ul>
-      </section>
-
-      <section>
-        <h3>ENGG1805 Tutor</h3>
-        <p>Casual
-        <p>University of Sydney
-        <p>Semester 1 2017
-        <ul>
-          <li>Professional Engineering and IT
-          <li>3 two-hour labs per week
-          <li>Tutored students on the use of tools such as Git and Eclipse
-          <li>Taught good testing practices through JUnit
-          <li>Marked students' final Java projects, developed over serveral weeks of work in teams
-        </ul>
-      </section>
-
-      <section>
-        <h3>INFO1105 Tutor</h3>
-        <p>Casual
-        <p>University of Sydney
-        <p>Semester 2 2017
-        <ul>
-          <li>Data Structures
-          <li>2 two-hour labs per week
-          <li>Introduced students to data structures and big-O analysis
-          <li>Helped students with Java assignments and implementing data structures
-          <li>Marked assignments and exams
-        </ul>
-      </section>
-    </div>
-
-  </section>
-
-  <section class="camp">
-    <h2>Volunteer History</h2>
-
-    <div>
-      <section>
-        <h3>National Computer Science School Camp</h3>
-        <p>January 2017 - Web tutor
-        <ul>
-          <li>Ten-day intensive computer science school for students years 10 - 12
-          <li>Worked with a team of 6 tutors to manage a classroom of 17 students
-          <li>Provided support with developing a web application with Tornado, including Python, SQL and web design
-        </ul>
-      </section>
-
-      <section>
-        <h3>Girl's Programming Network</h3>
-        <p>May 2017 - Stream coordinator
-        <ul>
-          <li>Tutored a classroom of year 5 - 8 students
-          <li>Helped create content for workbooks and computerless computing games
-          <li>Provided advice and support to students learning Python
-        </ul>
-      </section>
-
-      <section>
-        <h3>Sydney University IT Society</h3>
-        <p>2017 Diversity Representative Executive
-        <ul>
-          <li>Helped organize a Diversity in Tech panel in collaboration with USU as part of Verge Festival
-          <li>Helped with weekly events
-          <li>Provided newsletter content for diversity-related tech events in Sydney
-        </ul>
-      </section>
-
-    </div>
-
+    <h3>Tutor, <a href="groklearning.com/webcomp">Web.Comp</a> and <a href="groklearning.com/challenge">NCSS Challenge</a></h3>
+    <p class="details">2017, 2018 @ GrokLearning and The University of Sydney
+    <p>Online, 5 week Python and web courses and competitions for high school students.
+      Helped students with Python, HTML, and CSS problems with a team of other tutors.
+    </p>
   </section>
 
   <section>
-    <h2>Events</h2>
-
-    <div>
-      <section>
-        <h3>Global Game Jam</h3>
-        <p style="padding-left: 10px;">2017
-        <ul>
-          <li>Worked with a team of 7 to create a game in 48 hours
-          <li>Learned Unity and C# on the spot during the game jam
-          <li>Became main programmer halfway through the jam
-          <li>Received an Honorable Mention jammy award
-        </ul>
-      </section>
-
-      <section>
-        <h3>UniHack</h3>
-        <p>2017
-        <ul>
-          <li>Worked with a team of 4 to create a software project over 24 hours
-          <li>Used machine learning libraries to create recommendation software
-          <li>Received awards for best teamwork and algorithms
-        </ul>
-      </section>
-
-    </div>
+    <h3>Resident Tutor, <a href="ncss.edu.au">NCSS Camp</a></h3>
+    <p class="details">January 2017, 2018 @ The University of Sydney</p>
+    <p>Ten day intensive computer science summer school for Year 10 - 12 students.
+      Worked with a team of 6 tutors to manage group lab sessions of around
+      20 students. Assisted with organization and running of social activities.
+      Supported development of websites and embedded projects using Tornado,
+      Python, SQL, HTML, CSS, and MicroBit.
+    </p>
   </section>
+
+  <section>
+    <h3>Tutor, Introduction to Programming (INFO1110)</h3>
+    <p class="details">Semester 1 2018 @ The University of Sydney
+    <p>Python-based introductory programming course compulsory for computer science
+      students. Ran two weekly two-hour programming labs of 20-30 students and
+      supervised in-class quizzes.
+  </section>
+
+  <section>
+    <h3>Tutor, Data Structures & Algorithms (COMP2123)</h3>
+    <p class="details">Semester 1 2018 @ The University of Sydney
+    <p>Python and Java-based programming course compulsory for computer science
+      students. Introduced students to data structures and basic algorithms.
+      Ran two weekly two-hour programming labs of 20-30 students and supervised in-class
+      quizzes.
+  </section>
+
+  <section>
+    <h3>Summer Trainee Engineering Program Intern</h3>
+    <p class="details">December 2017 - February 2018 @ Google</p>
+    <p>A 12 week, full-time internship working with a partner and hosts on an
+      intern project. Worked on an existing application using AngularJS,
+      Google AppEngine, and webapp2. Implemented new features according to
+      product manager's requirements. Cleaned up existing codebase by
+      refactoring CSS into LESS and refactoring Python code to suit style guides.
+  </section>
+
+  <section>
+    <h3>Diversity Representative, <a href="https://suits.org.au/">Sydney University IT Society</a></h3>
+    <p class="details">Semester 1 & 2, 2017
+    <p>University society for IT students.
+      Assisted with weekly social events and prepared newsletter content.
+      Collaborated with the University of Sydney Union for the Verge Festival
+      to organize a Diversity in Tech panel.
+  </section>
+
+  <section>
+    <h3>Stream Coordinator, <a href="https://sites.google.com/site/girlsprogrammingnetwork/">Girl's Programming Network</a></h3>
+    <p class="details">May 2017 @ The University of Sydney</p>
+    <p>One day workshop aimed towards teaching Python to
+      high school and primary school students.
+      Helped with content creation for workbooks, lectures, and social activities.
+      Ran a classroom of 20 students with a team of other tutors.
+    </p>
+  </section>
+
+  <section>
+    <h3>Tutor, Data Structures (INFO1105)</h3>
+    <p class="details">Semester 2 2017 @ The University of Sydney
+    <p>Java-based programming course on common data structures and an introduction to
+      time complexity analysis, compulsory for computer science students.
+      Ran two weekly two-hour programming labs of 20-30 students.
+      Supervised in-class quizzes and marked assignments and final exams.
+  </section>
+
+  <section>
+    <h3>Tutor, Professional Engineering and IT (ENGG1805)</h3>
+    <p class="details">Semester 1 2017 @ The University of Sydney</p>
+    <p>Introductory course on development practices and tools,
+      compulsory for computer science students.
+      Ran three weekly two-hour labs of 20-30 students and marked assignments.
+  </section>
+
+  <section>
+    <h3>Unihack</h3>
+    <p class="details">August 2017, ThoughtWorks Prize for Team Collaboration, Most Elegant Algorithm Award
+    <p>Hackaton to create and pitch a product in 24 hours.
+      Worked with a team of 3 others to develop a
+      <a href="https://devpost.com/software/shrec-yknhxc">
+        game recommendation website
+      </a> in Python using machine learning libraries.
+  </section>
+
+  <section>
+    <h3>Global Game Jam</h3>
+    <p class="details">January 2016, Honorable Mention
+    <p>Contest to create a game with a specific theme from scratch in 48 hours.
+      Worked with a team of 6 others to create a
+      <a href="https://globalgamejam.org/2016/games/freddie-finds-his-fit">game</a>
+      using Unity and C#.
+  </section>
+
 </main>
