--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
   <p><i class="fas fa-university fa-fw"></i>
     <span class="details">2016 - present</span>
     Student at the <strong>University of Sydney</strong> undergoing a
-    <strong>Bachelor of Computer Science and Technology</strong>
+    <strong>Bachelor of Computer Science and Technology (Honors)</strong>
   <p><i class="fas fa-graduation-cap fa-fw"></i>
     Cert III in <strong>Information and Digital Technologies</strong>
   <p><i class="fas fa-laptop-code fa-fw"></i>
@@ -39,69 +39,71 @@
   <p><i class="fas fa-laptop fa-fw"></i>
     <strong>Git</strong>,
     Angular,
-    <strong>Flask</strong>
+    <strong>Flask</strong>,
+    Unreal Engine
 </header>
 
 <main>
 
   <section>
-    <h3>Tutor, <a href="groklearning.com/webcomp">Web.Comp</a> and <a href="groklearning.com/challenge">NCSS Challenge</a></h3>
-    <p class="details">2017, 2018 @ GrokLearning and The University of Sydney
-    <p>Online, 5 week Python and web courses and competitions for high school students.
-      Helped students with Python, HTML, and CSS problems with a team of other tutors.
-    </p>
+    <h3>2019 Google SWE (Software Engineering) Intern</h3>
+    <p>A 3 month, full-time internship working on an existing team, improving
+      journey sharing within location sharing in Android Google Maps, using Java.
+      Implemented new features in addition to cleaning up existing codebase.
+      Designed and documented approach and coordinated with codebase owners in
+      Mountain View, CA. Work involved a range of the tech stack including the
+      frontend Android client, backend server, and database communication.
   </section>
 
   <section>
-    <h3>Resident Tutor, <a href="ncss.edu.au">NCSS Camp</a></h3>
-    <p class="details">January 2017, 2018 @ The University of Sydney</p>
+    <h3>2017-19 University of Sydney Casual Tutor</h3>
+    <p>Ran 2-3 weekly classes of 20-30 undergraduate students, marked assignments, and supervised in-class quizzes.
+    <ul>
+      <li>INFO1112 Computing 1B OS & Network Platforms (Bash and Python)
+      <li>INFO1110 Introduction to Programming (Python)
+      <li>COMP2123 Data Structures & Algorithms (Python and Java)
+      <li>INFO1105 Data Structures (Java)
+      <li>ENGG1805 Professional Engineering and IT (Java)
+    </ul>
+  </section>
+
+  <section>
+    <h3>2017-18 <a href="groklearning.com/webcomp">Web.Comp</a> and
+      <a href="groklearning.com/challenge">NCSS Challenge</a> Tutor</h3>
+    <p>Online, 5 week Python and web courses and competitions for high school students.
+      Helped students with Python, HTML, and CSS problems with a team of other tutors.
+  </section>
+
+  <section>
+    <h3>2017-18 <a href="ncss.edu.au">NCSS Camp</a> Resident Tutor</h3>
     <p>Ten day intensive computer science summer school for Year 10 - 12 students.
       Worked with a team of 6 tutors to manage group lab sessions of around
       20 students. Assisted with organization and running of social activities.
-      Supported development of websites and embedded projects using Tornado,
+      Supported development of websites, chatbots and embedded projects using Tornado,
       Python, SQL, HTML, CSS, and MicroBit.
-    </p>
   </section>
 
   <section>
-    <h3>Tutor, Introduction to Programming (INFO1110)</h3>
-    <p class="details">Semester 1 2018 @ The University of Sydney
-    <p>Python-based introductory programming course compulsory for computer science
-      students. Ran two weekly two-hour programming labs of 20-30 students and
-      supervised in-class quizzes.
-  </section>
-
-  <section>
-    <h3>Tutor, Data Structures & Algorithms (COMP2123)</h3>
-    <p class="details">Semester 1 2018 @ The University of Sydney
-    <p>Python and Java-based programming course compulsory for computer science
-      students. Introduced students to data structures and basic algorithms.
-      Ran two weekly two-hour programming labs of 20-30 students and supervised in-class
-      quizzes.
-  </section>
-
-  <section>
-    <h3>Summer Trainee Engineering Program Intern</h3>
-    <p class="details">December 2017 - February 2018 @ Google</p>
-    <p>A 12 week, full-time internship working with a partner and hosts on an
+    <h3>2018 Google STEP (Summer Trainee Engineering Program) Intern</h3>
+    <p>A 3 month, full-time internship working with a partner and hosts on an
       intern project. Worked on an existing application using AngularJS,
       Google AppEngine, and webapp2. Implemented new features according to
       product manager's requirements. Cleaned up existing codebase by
       refactoring CSS into LESS and refactoring Python code to suit style guides.
+      Analyzed and optimized application load times.
   </section>
 
   <section>
-    <h3>Diversity Representative, <a href="https://suits.org.au/">Sydney University IT Society</a></h3>
-    <p class="details">Semester 1 & 2, 2017
+    <h3>2017 <a href="https://suits.org.au/">Sydney University IT Society</a> Diversity Representative</h3>
     <p>University society for IT students.
       Assisted with weekly social events and prepared newsletter content.
       Collaborated with the University of Sydney Union for the Verge Festival
-      to organize a Diversity in Tech panel.
+      to organize a
+      <a href="https://www.eventbrite.com.au/e/diversity-in-tech-panel-sponsored-by-google-tickets-38219947893#">Diversity in Tech panel</a>.
   </section>
 
   <section>
-    <h3>Stream Coordinator, <a href="https://sites.google.com/site/girlsprogrammingnetwork/">Girl's Programming Network</a></h3>
-    <p class="details">May 2017 @ The University of Sydney</p>
+    <h3>2017 <a href="https://sites.google.com/site/girlsprogrammingnetwork/">Girl's Programming Network</a> Stream Coordinator</h3>
     <p>One day workshop aimed towards teaching Python to
       high school and primary school students.
       Helped with content creation for workbooks, lectures, and social activities.
@@ -110,39 +112,21 @@
   </section>
 
   <section>
-    <h3>Tutor, Data Structures (INFO1105)</h3>
-    <p class="details">Semester 2 2017 @ The University of Sydney
-    <p>Java-based programming course on common data structures and an introduction to
-      time complexity analysis, compulsory for computer science students.
-      Ran two weekly two-hour programming labs of 20-30 students.
-      Supervised in-class quizzes and marked assignments and final exams.
-  </section>
-
-  <section>
-    <h3>Tutor, Professional Engineering and IT (ENGG1805)</h3>
-    <p class="details">Semester 1 2017 @ The University of Sydney</p>
-    <p>Introductory course on development practices and tools,
-      compulsory for computer science students.
-      Ran three weekly two-hour labs of 20-30 students and marked assignments.
-  </section>
-
-  <section>
-    <h3>Unihack</h3>
-    <p class="details">August 2017, ThoughtWorks Prize for Team Collaboration, Most Elegant Algorithm Award
+    <h3>2017 <a href="https://unihack.net/">Unihack</a> Minor Prizewinner</h3>
     <p>Hackaton to create and pitch a product in 24 hours.
       Worked with a team of 3 others to develop a
       <a href="https://devpost.com/software/shrec-yknhxc">
         game recommendation website
-      </a> in Python using machine learning libraries.
+      </a> in Python using machine learning libraries. Won Most Elegant Algoithm Award,
+      and ThoughtWorks Prize for Team Collaboration.
   </section>
 
   <section>
-    <h3>Global Game Jam</h3>
-    <p class="details">January 2016, Honorable Mention
+    <h3>2016 <a href="https://globalgamejam.org/">Global Game Jam</a> Honorable Mention Prizewinner</h3>
     <p>Contest to create a game with a specific theme from scratch in 48 hours.
       Worked with a team of 6 others to create a
       <a href="https://globalgamejam.org/2016/games/freddie-finds-his-fit">game</a>
-      using Unity and C#.
+      using Unity and C#. Won an honorable mention award.
   </section>
 
 </main>
